# thisweek_core

./: .env  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2024-07-12-201822_create_items/: up.sql
src/: calendar.rs  config.rs  db.rs  db_redb.rs.backup  db_sqlite.rs  error.rs  language.rs  lib.rs  main.rs  models.rs  month_names.rs  notify.rs  ordering.rs  schema.rs  season_names.rs  time.rs  today.rs  week.rs  week_info.rs  week_names.rs  weekday_names.rs  weekdays.rs  year.rs
src/calendar/: arabic.rs  calendar_names.rs  chinese.rs  gregorian.rs  mod.rs  persian.rs
