[package]
name = "weeks_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
time = "0.1"
ptime = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
redb = "1.5.0"
cuid2 = "0.1.2"
homedir = "0.2.1"
# once_cell = "1.19.0"
diesel = { version = "2.2.1", features = ["sqlite"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dotenvy = "0.15.7"
midstring = "0.1.3"
toml = "0.8.19"
thiserror = "1.0.63"
once_cell = "1.19.0"
# tempfile = "3.10.0"
