[package]
name = "thisweek-core"
version = "0.1.0"
license = "MIT"
description = "The core rust backend for ThisWeek application"
homepage = "https://github.com/jeot/thisweek_core"
repository = "https://github.com/jeot/thisweek_core"
authors = ["Shamim Keshani <sh.keshani@gmail.com>"]
keywords = ["weekly-task-management", "goals", "notes", "multiple-calendar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
time = "0.1"
ptime = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
redb = "1.5.0"
cuid2 = "0.1.2"
homedir = "0.2.1"
diesel = { version = "2.2.1", features = ["sqlite"] }
diesel_migrations = "2.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
midstring = "0.1.3"
toml = "0.8.19"
thiserror = "1.0.63"
once_cell = "1.19.0"
arc-swap = "1.7.1"
notify-debouncer-mini = "0.4.1"
chinese-lunisolar-calendar = "0.2.0"
icu = "1.5.0"
directories = "5.0.1"
